hphp/test/slow/readonly/cgets.hhas.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Property a of class A must be mutable.' in %s/cgets.hhas:17
%A
